# cpp-for-programmers

exercise-1/: CMakeLists.txt  temperatures-from-file.cpp  temperatures-from-user-input.cpp
exercise-10/: README.md
exercise-2/: CMakeLists.txt  oppgave-1.cpp  oppgave-4.cpp  oppgave-5.cpp  oppgave-6.cpp
exercise-3/: CMakeLists.txt  circle.cpp  circle.hpp  circle_test.cpp  commodity.cpp  commodity.hpp  commodity_test.cpp  string_practice.cpp
exercise-4/: CMakeLists.txt  name_converter.cpp  vector_double.cpp
exercise-5/: CMakeLists.txt  main.cpp
exercise-6/: CMakeLists.txt  chess.cpp  webserver.cpp
exercise-7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  set.cpp  set.hpp
exercise-8/: CMakeLists.txt  equal.cpp  main.cpp  pair.cpp  pair.hpp
exercise-9/: CMakeLists.txt  main.cpp
lesson-1/: CMakeLists.txt  null-terminated-strings.cpp  simple-file-handling.cpp  square.cpp  tables.cpp
lesson-2/: CMakeLists.txt  argumentTransfer.cpp  main.cpp
lesson-3/: CMakeLists.txt  covering.cpp  covering.hpp  material.cpp  material.hpp  material_test.cpp  string-class.cpp  surface.cpp  surface.hpp
